--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
             </nav>
         </div>
     </header>
+    <main>
+       <section class="banner">
+        <img src="img/Banner-01.jpg" alt="banner pet shop">
+        
+       </section>
+    </main>
 </body>
 </html>
